--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       </div>
     </section>
 
-    <div class="text-primary coptright">&copy;Pluralsight 2018</div>
+    <div class="text-primary copyright">&copy;Pluralsight 2018</div>
   </footer>
 </body>
 </html>
